--- a/style/home.css
+++ b/style/home.css
@@ -51,6 +51,7 @@ nav {
     align-items: center;
 }
 
+
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
@@ -100,7 +101,8 @@ nav {
 .hero {
     text-align: center;
     padding: 8rem 1rem;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/image.png');
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url('/assets/visa3.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
